bug: fix dark mode on virtual folders

--- a/client/app/assets/app.css
+++ b/client/app/assets/app.css
@@ -383,6 +383,7 @@ md-tooltip.tooltip-multiline {
 }
 
 .md-open-menu-container.md-dark-theme md-menu-content,
+.md-open-menu-container.md-dark-theme md-menu-content md-menu-item,
 md-bottom-sheet.md-dark-theme {
   background: #2f2f3b;
   color: white;
